--- a/BearLibNET.csproj
+++ b/BearLibNET.csproj
@@ -3,14 +3,14 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.0.1</Version>
+    <Version>2.0.2</Version>
     <Authors>Evan Burkey</Authors>
     <Product />
     <Company />
     <Description>BearLibTerminal wrapper for .NET 5</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/eburkey/BearLibNET</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/eburkey/BearLibNET</RepositoryUrl>
+    <PackageProjectUrl>https://git.sr.ht/~eburkey/BearLibNET</PackageProjectUrl>
+    <RepositoryUrl>https://git.sr.ht/~eburkey/BearLibNET</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
