--- a/.gitignore
+++ b/.gitignore
@@ -516,3 +516,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp,visualstudio
+/BearLibNET/Build/*
