--- a/TestConsole/TestConsole/TestConsole.csproj
+++ b/TestConsole/TestConsole/TestConsole.csproj
@@ -6,7 +6,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\BearLibNET\BearLibNET.csproj" />
+    <PackageReference Include="DaceKonn.BearLibNET" Version="2.1.1-alpha" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="C:\Users\piotr\.nuget\packages\dacekonn.bearlibnet\2.1.1\contentFiles\any\net5.0\BearLibTerminal.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\piotr\.nuget\packages\dacekonn.bearlibnet\2.1.3\contentFiles\any\net5.0\BearLibTerminal.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="C:\Users\piotr\.nuget\packages\dacekonn.bearlibnet\2.1.8\contentFiles\any\net5.0\BearLibTerminal.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
