--- a/BearLibNET/BearLibNET.csproj
+++ b/BearLibNET/BearLibNET.csproj
@@ -18,8 +18,12 @@
     <PackageOutputPath>../nupkgs</PackageOutputPath>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;NU5100</NoWarn>
+  </PropertyGroup>
   
   <ItemGroup>
-    <Content Include="BearLibTerminal.dll" PackageCopyToOutput="true"/>
+    <Content Include="BearLibTerminal.dll" PackageCopyToOutput="true" />
   </ItemGroup>
 </Project>
